# t1_hackathon

./: .gitignore  README.md  pyproject.toml
admin_app/: .eslintrc.cjs  .prettierrc  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
admin_backend/: .env.example  Dockerfile  app.py  entrypoint.sh  main.py  pyproject.toml  settings.py  start.sh
admin_backend/app/: assistant.py  assistant_window.py  db.py  dependencies.py  repositories.py  settings.py
admin_backend/app/assistant_window/: api.py  schemas.py
admin_backend/app/auth/: api.py  schemas.py  services.py
admin_backend/app/config/: config.py
admin_backend/app/datasets/: api.py
admin_backend/app/datasets/requests/: requests.py
admin_backend/app/datasets/responses/: responses.py
admin_backend/app/db_services/: api.py
admin_backend/app/db_services/db_adapters/: adapters.py  postgres_adapter.py
admin_backend/app/db_services/requests/: requests.py
admin_backend/app/exceptions/: exceptions.py  handlers.py
admin_backend/app/file_services/: api.py  converter.py  csv_covnerter.py  empty_converter.py  schemas.py
admin_backend/app/site_services/: api.py  site_extractor.py
admin_backend/db_services/: api.py
admin_backend/db_services/db_adapters/: postgres_adapter.py
admin_backend/db_services/requests/: requests.py
admin_backend/file_services/: api.py  empty_converter.py
admin_backend/migrations/: 000001_initial.down.sql  000001_initial.up.sql
docker/: .env.example  docker-compose-base.yml  docker-compose.yml
(+61 files in other folders)
