[tool.poetry]
name = "t1-hack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
asyncpg = "^0.30.0"
python-multipart = "^0.0.17"
pydantic-settings = "^2.6.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
detect-delimiter = "^0.1.1"
aiologger = "^0.7.0"
ragflow-sdk = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
